# BeringLab-backend-assignment

./: .env  README.md  main.py  pyproject.toml
app/: config.py  models.py
app/adapters/: account_repository.py  card_repository.py
app/domain/: account.py  card.py
app/ports/: account_port.py  card_port.py
app/services/: account_service.py  card_service.py
tests/: conftest.py
tests/unit/: test_bank_system.py
